--- a/Aug28_Python Review/python-review.ipynb
+++ b/Aug28_Python Review/python-review.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fda2b5c7",
    "metadata": {},
    "outputs": [],
@@ -49,13 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "3c50eb62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of foo is 5and its type is <class 'int'>\n",
+      "The value of foo is 3.14and its type is <class 'float'>\n",
+      "The value of foo is Evanand its type is <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Code goes here\n",
-    "\n"
+    "foo = int(5)\n",
+    "bar = float(3.14)\n",
+    "myname = str(\"Evan\")\n",
+    "print(\"The value of foo is \" + str(foo) + \"and its type is \" + str(type(foo)))\n",
+    "print(\"The value of foo is \" + str(bar) + \"and its type is \" + str(type(bar)))\n",
+    "print(\"The value of foo is \" + str(myname) + \"and its type is \" + str(type(myname)))"
    ]
   },
   {
@@ -75,12 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "12ed19f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo is less than bar\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code goes here"
+    "# Code goes here\n",
+    "if float(foo) < float(bar):\n",
+    "\tprint(\"foo is greater than bar\")\n",
+    "else:\n",
+    "\tprint(\"foo is less than bar\")"
    ]
   },
   {
@@ -99,14 +126,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "903c54f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This number is composite\n"
+     ]
+    }
+   ],
    "source": [
     "def isPrime(num: int) -> bool: # Notice how here I've specified that the input should be an int and the return value should be a bool\n",
-    "    return True # Remove this line.  Right now, the function thinks all numbers are prime!\n",
-    "    # code goes here"
+    "    check = int(sqrt(num))\n",
+    "    n = 2\n",
+    "    while n <= check:\n",
+    "        if num & n == 0:\n",
+    "            print(\"This number is composite\")\n",
+    "            break\n",
+    "        elif n == check:\n",
+    "            print(\"This number is prime\")\n",
+    "            break\n",
+    "        else:\n",
+    "            n += 1\n",
+    "isPrime(4)"
    ]
   },
   {
@@ -127,28 +172,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "af918624",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Vertex:\n",
     "    def __init__(self, xcoord, ycoord):\n",
-    "        # code goes here\n",
-    "        pass # remove this line\n",
+    "        self.x = xcoord\n",
+    "        self.y = ycoord\n",
     "\n",
     "\n",
     "def Distance(v1: Vertex, v2: Vertex):\n",
-    "    return 5\n",
+    "    xdis = abs(v1.x - v2.x)\n",
+    "    ydis = abs(v1.y - v2.y)\n",
+    "    result = float(sqrt(xdis**2 + ydis**2))\n",
+    "    return result\n",
     "\n",
     "\n",
     "class Triangle:\n",
-    "    def __init__(self, otherstufftofill):\n",
-    "        pass \n",
+    "    def __init__(self, v1: Vertex, v2: Vertex, v3: Vertex):\n",
+    "        self.v1 = v1\n",
+    "        self.v2 = v2\n",
+    "        self.v3 = v3\n",
     "\n",
     "    def area(self):\n",
-    "        return 1\n",
-    "    "
+    "        a = Distance(self.v1, self.v2)\n",
+    "        b = Distance(self.v2, self.v3)\n",
+    "        c = Distance(self.v3, self.v1)\n",
+    "        s = 0.5*(a+b+c)\n",
+    "        result = float(sqrt(s*(s-a)*(s-b)*(s-c)))\n",
+    "        return result"
    ]
   },
   {
@@ -161,12 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "a741e0a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "5.0\n",
+      "4.0\n",
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code goes here\n"
+    "# Code goes here\n",
+    "a = Vertex(0, 0)\n",
+    "b = Vertex(3, 0)\n",
+    "c = Vertex(0, 4)\n",
+    "\n",
+    "t = Triangle(a, b, c)\n",
+    "\n",
+    "print(Distance(a, b))  # 3.0\n",
+    "print(Distance(b, c))  # 5.0\n",
+    "print(Distance(c, a))  # 4.0\n",
+    "print(t.area())        # 6.0"
    ]
   }
  ],
@@ -186,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
