--- a/Neural Nets/neuralnets1.ipynb
+++ b/Neural Nets/neuralnets1.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2dc2e4d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-08 09:46:56.847088: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-08 09:46:56.860001: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1759931216.874786  305213 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1759931216.877521  305213 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-08 09:46:56.893321: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -17,15 +31,18 @@
     "def sigmoid(x):\n",
     "    return 1/(1+math.exp(-x))\n",
     "\n",
-    "vec_sigmoid = np.vectorize(sigmoid)\n",
+    "def sigmoidderivative(x):\n",
+    "    return sigmoid(x) * (1-sigmoid(x))\n",
     "\n",
+    "vec_sigmoid = np.vectorize(sigmoid)\n",
+    "vec_sigmoidderivative = np.vectorize(sigmoidderivative)\n",
     "\n",
     "RNG = np.random.default_rng()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1bdb68e1",
    "metadata": {},
    "outputs": [],
@@ -67,33 +84,26 @@
     "                acc = acc + (outputs[i]-truevalues[i])**2\n",
     "\n",
     "            return acc/(2*n)\n",
-    "        \n"
+    "        \n",
+    "    def computeGradient(self, inputs):\n",
+    "\n",
+    "        dzdh \n",
+    "        dl\n",
+    "    \n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "98431f6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.13681173, 0.80575315, 0.35512679],\n",
-       "       [0.85748779, 0.66741745, 0.88132103]])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "MyNN = NeuralNetworkLayer(2,2, \"Sigmoid\", None)\n",
+    "MyNN = NeuralNetworkLayer(2,2, \"Sigmoid\", \"MSE\")\n",
     "\n",
-    "myInputs = np.array([1,2])\n",
-    "\n",
-    "MyNN.weights"
+    "myInputs = np.array([1,2])\n"
    ]
   },
   {
@@ -125,49 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "93d9e9b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "arr1 = np.array([1,2])\n",
-    "print(arr1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "739ebe9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.append(arr1,[3])\n",
-    "arr1.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "313d58ec",
+   "id": "9f886ed8",
    "metadata": {},
    "outputs": [],
    "source": []
