--- a/Neural Nets/neuralnets1.ipynb
+++ b/Neural Nets/neuralnets1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2dc2e4d4",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-08 09:46:56.847088: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-08 09:46:56.860001: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1759931216.874786  305213 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1759931216.877521  305213 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-10-08 09:46:56.893321: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "Matplotlib is building the font cache; this may take a moment.\n"
      ]
     }
    ],
@@ -144,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlbase",
+   "display_name": "ML-base",
    "language": "python",
    "name": "python3"
   },
