Working on backprop stuff

--- a/Neural Nets/neuralnets2.ipynb
+++ b/Neural Nets/neuralnets2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "85b65288",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b4d98633",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "        self.weights = RNG.random((self.numoutputs, self.numinputs + 1))\n",
     "\n",
     "    \n",
-    "    def evaluate(self, inputs):\n",
+    "    def Evaluate(self, inputs):\n",
     "\n",
     "        inputs = np.append(inputs, np.array([1]))\n",
     "    \n",
@@ -57,8 +57,22 @@
     "\n",
     "    \n",
     "        \n",
-    "    def computeGradient(self, inputs):\n",
-    "        pass\n",
+    "    def ComputeLocalGradient(self, inputs):\n",
+    "        # z is output after activation\n",
+    "        # h is output after linear layer\n",
+    "        # w are weights\n",
+    "        # Need to compute two things:\n",
+    "        # dz/dh\n",
+    "        # dh/dw\n",
+    "\n",
+    "\n",
+    "        if self.activation == \"Sigmoid\":\n",
+    "            dzdh = np.diag(vec_sigmoidderivative(inputs))\n",
+    "            dhdw = \n",
+    "\n",
+    "\n",
+    "        return localgradient\n",
+    "\n",
     "    \n",
     "    \n",
     "\n",
@@ -67,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "79a744c2",
    "metadata": {},
    "outputs": [],
@@ -78,6 +92,7 @@
     "        \n",
     "        self.errorfunc = errorfunc\n",
     "        self.layers = []\n",
+    "        self.numlayers = 0\n",
     "\n",
     "    def AppendLayer(self, layer: NeuralLayer):\n",
     "        # need to check that the new layer to be appended has same \n",
@@ -85,21 +100,49 @@
     "        if len(self.layers) > 0:\n",
     "            if layer.numinputs == self.layers[-1].numoutputs:\n",
     "                self.layers.append(layer)\n",
+    "                self.numlayers += 1\n",
     "            else:\n",
     "                print(\"Error: number of inputs does not match previous layer\")\n",
     "        else:\n",
     "            self.layers.append(layer)\n",
+    "            self.numlayers += 1\n",
+    "\n",
     "        \n",
     "    def Evaluate(self, inputs):\n",
     "\n",
     "        outputs = []\n",
     "        outputs.append(self.layers[0].evaluate(inputs))\n",
     "\n",
-    "        for i in range(1,len(self.layers)):\n",
+    "        for i in range(1,self.numlayers):\n",
     "            outputs.append(self.layers[i].evaluate(outputs[i-1]))\n",
     "        \n",
     "        return outputs\n",
     "\n",
+    "    def ComputeError(self, inputs, trueoutputs):\n",
+    "\n",
+    "        outputs = self.Evaluate(inputs)\n",
+    "        \n",
+    "        if self.errorfunc == \"MSE\":\n",
+    "            n = len(outputs[-1])\n",
+    "            diffs = trueoutputs - outputs[-1]\n",
+    "            err = np.dot(diffs, diffs)\n",
+    "            err = err/(2*n)\n",
+    "            return err\n",
+    "\n",
+    "    def BackPropagate(self, inputs, trueoutputs):\n",
+    "\n",
+    "        outputs = self.Evaluate(inputs)\n",
+    "        gradients = []\n",
+    "\n",
+    "        for i in range(self.numlayers):\n",
+    "            if i == 0:\n",
+    "                tempinput = inputs\n",
+    "            else:\n",
+    "                tempinput = outputs[i-1]\n",
+    "            \n",
+    "            gradients.append(self.layers[i].ComputeLocalGradient(tempinput))\n",
+    "        \n",
+    "        \n",
     "\n",
     "            \n",
     "\n",
@@ -108,40 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "eef2ccb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MyNN = NeuralNetwork(errorfunc=\"MSE\")\n",
-    "MyLayer = NeuralLayer(2, 3, \"Sigmoid\")\n",
-    "MyLayer2 = NeuralLayer(3, 7, \"Sigmoid\")\n",
+    "MyLayer = NeuralLayer(2, 2, \"Sigmoid\")\n",
+    "MyLayer.weights = np.array([[1, 2, -1], [3, -2, 1]])\n",
+    "MyLayer.weights\n",
     "\n",
-    "\n",
-    "print(len(MyNN.layers))\n",
-    "\n",
-    "MyNN.AppendLayer(MyLayer)\n",
-    "\n",
-    "print(len(MyNN.layers))\n",
-    "\n",
-    "MyNN.AppendLayer(MyLayer2)\n",
-    "\n",
-    "print(len(MyNN.layers))\n"
+    "MyNN.AppendLayer(MyLayer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "346a0b8d",
    "metadata": {},
    "outputs": [
@@ -149,21 +174,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0.81826153, 0.85142181, 0.95983715]), array([0.8823779 , 0.87770295, 0.88548632, 0.80435078, 0.82305602,\n",
-      "       0.87525498, 0.83172741])]\n"
+      "[0.98201379 0.5       ]\n",
+      "(2,)\n",
+      "[ 0.01798621 -0.5       ]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.06258087593720012)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "test1 = np.array([1, 2])\n",
     "test2 = MyNN.Evaluate(test1)\n",
-    "print(test2)"
+    "\n",
+    "print(test2[-1])\n",
+    "true1 = np.array([1,0])\n",
+    "\n",
+    "MyNN.ComputeError(test2[-1], true1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3b2dfd",
+   "id": "3d2f7394",
    "metadata": {},
    "outputs": [],
    "source": []
