Updated multi-layer stuff.

--- a/Neural Nets/neuralnets2.ipynb
+++ b/Neural Nets/neuralnets2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "id": "85b65288",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,33 @@
     "vec_sigmoid = np.vectorize(sigmoid)\n",
     "vec_sigmoidderivative = np.vectorize(sigmoidderivative)\n",
     "\n",
-    "RNG = np.random.default_rng()"
+    "RNG = np.random.randn()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
+   "id": "0a66e1c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.63096682])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randn(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "b4d98633",
    "metadata": {},
    "outputs": [],
@@ -41,7 +62,7 @@
     "        self.numinputs = numinputs\n",
     "        self.numoutputs = numoutputs\n",
     "        self.activation = activation\n",
-    "        self.weights = RNG.random((self.numoutputs, self.numinputs + 1))\n",
+    "        self.weights = np.random.randn(self.numoutputs, self.numinputs + 1)\n",
     "\n",
     "    \n",
     "    def Evaluate(self, inputs):\n",
@@ -61,17 +82,30 @@
     "        # z is output after activation\n",
     "        # h is output after linear layer\n",
     "        # w are weights\n",
-    "        # Need to compute two things:\n",
+    "        # Need to compute three things:\n",
     "        # dz/dh\n",
     "        # dh/dw\n",
+    "        # dh/dx\n",
     "\n",
+    "        inputs = np.append(inputs, np.array([1]))\n",
+    "        outputs = self.weights @ inputs\n",
     "\n",
     "        if self.activation == \"Sigmoid\":\n",
-    "            dzdh = np.diag(vec_sigmoidderivative(inputs))\n",
-    "            dhdw = \n",
+    "            \n",
+    "            dzdh = np.diag(vec_sigmoidderivative(outputs))\n",
+    "\n",
+    "            dhdw = np.zeros((self.numoutputs, self.numoutputs, self.numinputs+1)) #because of bias\n",
+    "            \n",
+    "            for i in range(self.numoutputs):\n",
+    "                for j in range(self.numinputs):\n",
+    "                    dhdw[i,i,j] = inputs[i]\n",
+    "                dhdw[i,i,self.numinputs] = 1\n",
+    "            \n",
+    "                    \n",
+    "        dhdx = self.weights[:, :-1]\n",
     "\n",
     "\n",
-    "        return localgradient\n",
+    "        return (dzdh, dhdw, dhdx)\n",
     "\n",
     "    \n",
     "    \n",
@@ -81,7 +115,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
+   "id": "35480923",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n",
+      "(3, 3, 6)\n",
+      "(3, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Layer1 = NeuralLayer(5,3,\"Sigmoid\")\n",
+    "#Layer1.weights = np.array([[1, 2, -1], [3, -2, 1]])\n",
+    "test1 = np.array([1, 2,3,4,5])\n",
+    "(dzdh, dhdw, dhdx) = Layer1.ComputeLocalGradient(test1)\n",
+    "print(dzdh.shape)\n",
+    "print(dhdw.shape)\n",
+    "print(dhdx.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "79a744c2",
    "metadata": {},
    "outputs": [],
@@ -111,10 +171,10 @@
     "    def Evaluate(self, inputs):\n",
     "\n",
     "        outputs = []\n",
-    "        outputs.append(self.layers[0].evaluate(inputs))\n",
+    "        outputs.append(self.layers[0].Evaluate(inputs))\n",
     "\n",
     "        for i in range(1,self.numlayers):\n",
-    "            outputs.append(self.layers[i].evaluate(outputs[i-1]))\n",
+    "            outputs.append(self.layers[i].Evaluate(outputs[i-1]))\n",
     "        \n",
     "        return outputs\n",
     "\n",
@@ -124,16 +184,17 @@
     "        \n",
     "        if self.errorfunc == \"MSE\":\n",
     "            n = len(outputs[-1])\n",
-    "            diffs = trueoutputs - outputs[-1]\n",
+    "            diffs = outputs[-1] - trueoutputs\n",
     "            err = np.dot(diffs, diffs)\n",
     "            err = err/(2*n)\n",
     "            return err\n",
     "\n",
-    "    def BackPropagate(self, inputs, trueoutputs):\n",
+    "    def BackPropagate(self, inputs, trueoutputs, learningrate):\n",
     "\n",
     "        outputs = self.Evaluate(inputs)\n",
     "        gradients = []\n",
     "\n",
+    "        # Compute all the necessary gradients\n",
     "        for i in range(self.numlayers):\n",
     "            if i == 0:\n",
     "                tempinput = inputs\n",
@@ -141,69 +202,209 @@
     "                tempinput = outputs[i-1]\n",
     "            \n",
     "            gradients.append(self.layers[i].ComputeLocalGradient(tempinput))\n",
-    "        \n",
-    "        \n",
     "\n",
-    "            \n",
+    "        if self.errorfunc == \"MSE\":\n",
     "\n",
-    "\n"
+    "            dldz = outputs[-1] - trueoutputs\n",
+    "\n",
+    "        # Update weights, working backwards\n",
+    "\n",
+    "        currgrad = dldz @ gradients[-1][0]\n",
+    "    \n",
+    "        for i in range(self.numlayers-1, -1, -1):\n",
+    "            self.layers[i].weights -= learningrate * (currgrad @ gradients[i][1])\n",
+    "            currgrad = currgrad @ gradients[i][0] @ gradients[i][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "id": "eef2ccb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MyNN = NeuralNetwork(errorfunc=\"MSE\")\n",
-    "MyLayer = NeuralLayer(2, 2, \"Sigmoid\")\n",
-    "MyLayer.weights = np.array([[1, 2, -1], [3, -2, 1]])\n",
-    "MyLayer.weights\n",
-    "\n",
-    "MyNN.AppendLayer(MyLayer)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "346a0b8d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98201379 0.5       ]\n",
-      "(2,)\n",
-      "[ 0.01798621 -0.5       ]\n"
+      "0.1528830187961792\n",
+      "0.12452738319454848\n",
+      "0.09208926757939472\n",
+      "0.06253673651348027\n",
+      "0.04154976528980273\n",
+      "0.028720748296327477\n",
+      "0.021050586377095684\n",
+      "0.016266848704803247\n",
+      "0.013111504364355491\n",
+      "0.010920133321001077\n",
+      "0.009330680154468215\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "MyNN = NeuralNetwork(errorfunc=\"MSE\")\n",
+    "MyLayer1 = NeuralLayer(5, 3, \"Sigmoid\")\n",
+    "MyLayer2 = NeuralLayer(3, 2, \"Sigmoid\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "MyNN.AppendLayer(MyLayer1)\n",
+    "MyNN.AppendLayer(MyLayer2)\n",
+    "\n",
+    "myinput = np.array([1,2,3,4,5])\n",
+    "mytrue = np.array([1,0])\n",
+    "\n",
+    "#MyNN.Evaluate(myinput)\n",
+    "print(MyNN.ComputeError(myinput, mytrue))\n",
+    "\n",
+    "for i in range(10):\n",
+    "    MyNN.BackPropagate(myinput, mytrue, 1)\n",
+    "    #MyNN.Evaluate(myinput)\n",
+    "    print(MyNN.ComputeError(myinput, mytrue))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a6b2becb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
+    "assert x_train.shape == (60000, 28, 28)\n",
+    "assert x_test.shape == (10000, 28, 28)\n",
+    "assert y_train.shape == (60000,)\n",
+    "assert y_test.shape == (10000,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0d12a2f8",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.06258087593720012)"
+       "array([  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   3,  18,  18,  18,\n",
+       "       126, 136, 175,  26, 166, 255, 247, 127,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,  30,  36,  94, 154, 170, 253,\n",
+       "       253, 253, 253, 253, 225, 172, 253, 242, 195,  64,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,  49, 238, 253, 253, 253,\n",
+       "       253, 253, 253, 253, 253, 251,  93,  82,  82,  56,  39,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  18, 219, 253,\n",
+       "       253, 253, 253, 253, 198, 182, 247, 241,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "        80, 156, 107, 253, 253, 205,  11,   0,  43, 154,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,  14,   1, 154, 253,  90,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0, 139, 253, 190,   2,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,  11, 190, 253,  70,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  35,\n",
+       "       241, 225, 160, 108,   1,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,  81, 240, 253, 253, 119,  25,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,  45, 186, 253, 253, 150,  27,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,  16,  93, 252, 253, 187,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0, 249,\n",
+       "       253, 249,  64,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  46, 130,\n",
+       "       183, 253, 253, 207,   2,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  39, 148,\n",
+       "       229, 253, 253, 253, 250, 182,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  24, 114,\n",
+       "       221, 253, 253, 253, 253, 201,  78,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  23,  66,\n",
+       "       213, 253, 253, 253, 253, 198,  81,   2,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  18, 171,\n",
+       "       219, 253, 253, 253, 253, 195,  80,   9,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,  55, 172,\n",
+       "       226, 253, 253, 253, 253, 244, 133,  11,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "       136, 253, 253, 253, 212, 135, 132,  16,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0], dtype=uint8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test1 = np.array([1, 2])\n",
-    "test2 = MyNN.Evaluate(test1)\n",
+    "x_train[0].reshape(28*28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "f0adc12d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107.94117647058823\n",
+      "0.19414503171699102\n",
+      "1.4434620545635267e-05\n",
+      "Final check evaluation: [array([5.30330837e-03, 2.38488079e-05, 7.17693608e-03, 7.27893443e-03,\n",
+      "       6.66878134e-07, 9.99757310e-01, 7.19027901e-03, 7.26844085e-03,\n",
+      "       6.55544495e-05, 7.17509049e-03])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyMNISTNetwork = NeuralNetwork(\"MSE\")\n",
+    "MyMNISTNetwork.AppendLayer(NeuralLayer(28*28,10,\"Sigmoid\"))\n",
     "\n",
-    "print(test2[-1])\n",
-    "true1 = np.array([1,0])\n",
     "\n",
-    "MyNN.ComputeError(test2[-1], true1)"
+    "y_train[0]\n",
+    "\n",
+    "testinput = np.astype(x_train[0].reshape(28*28), np.float64)\n",
+    "testinput /= 255.0\n",
+    "print(testinput.sum())\n",
+    "#print(MyMNISTNetwork.Evaluate(testinput))\n",
+    "#print(MyMNISTNetwork.layers[-1].weights.dtype)\n",
+    "\n",
+    "onehot = np.array([0,0,0,0,0,1,0,0,0,0])\n",
+    "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
+    "for i in range(10000):\n",
+    "    MyMNISTNetwork.BackPropagate(testinput, onehot, 1)\n",
+    "    \n",
+    "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
+    "\n",
+    "print(\"Final check evaluation: \" + str(MyMNISTNetwork.Evaluate(testinput)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2f7394",
+   "id": "10d5d919",
    "metadata": {},
    "outputs": [],
    "source": []
