Added code for cross-entropy error

--- a/Neural Nets/neuralnets2.ipynb
+++ b/Neural Nets/neuralnets2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "85b65288",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,6 @@
     "import random\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "\n",
     "def sigmoid(x):\n",
     "    return 1/(1+math.exp(-x))\n",
     "\n",
@@ -21,24 +20,22 @@
     "    return sigmoid(x) * (1-sigmoid(x))\n",
     "\n",
     "vec_sigmoid = np.vectorize(sigmoid)\n",
-    "vec_sigmoidderivative = np.vectorize(sigmoidderivative)\n",
-    "\n",
-    "RNG = np.random.randn()"
+    "vec_sigmoidderivative = np.vectorize(sigmoidderivative)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "0a66e1c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.63096682])"
+       "array([-0.93701982])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "b4d98633",
    "metadata": {},
    "outputs": [],
@@ -58,7 +55,6 @@
     "\n",
     "    def __init__(self, numinputs:int, numoutputs:int, activation=None):\n",
     "\n",
-    "        global RNG\n",
     "        self.numinputs = numinputs\n",
     "        self.numoutputs = numoutputs\n",
     "        self.activation = activation\n",
@@ -71,8 +67,24 @@
     "    \n",
     "        outputs = self.weights @ inputs # this is \\vec{h}\n",
     "\n",
-    "        if self.activation == \"Sigmoid\":\n",
-    "            outputs = vec_sigmoid(outputs)\n",
+    "        match self.activation:\n",
+    "            case \"Sigmoid\":\n",
+    "                outputs = vec_sigmoid(outputs)\n",
+    "\n",
+    "            case \"Softmax\":\n",
+    "                denom = 0\n",
+    "                for i in range(len(outputs)):\n",
+    "                    denom += math.exp[outputs[i]]\n",
+    "                    outputs[i] = math.exp(outputs[i])\n",
+    "                outputs = outputs/denom\n",
+    "\n",
+    "            case \"ReLU\":\n",
+    "                pass \n",
+    "            \n",
+    "            case \"Tanh\":\n",
+    "                pass\n",
+    "\n",
+    "\n",
     "\n",
     "        return outputs\n",
     "\n",
@@ -90,18 +102,48 @@
     "        inputs = np.append(inputs, np.array([1]))\n",
     "        outputs = self.weights @ inputs\n",
     "\n",
-    "        if self.activation == \"Sigmoid\":\n",
-    "            \n",
-    "            dzdh = np.diag(vec_sigmoidderivative(outputs))\n",
     "\n",
-    "            dhdw = np.zeros((self.numoutputs, self.numoutputs, self.numinputs+1)) #because of bias\n",
+    "        # This part computes dzdh, and has cases for various activation functions\n",
+    "        match self.activation:\n",
+    "            case \"Sigmoid\":\n",
+    "                dzdh = np.diag(vec_sigmoidderivative(outputs))\n",
+    "            case \"Softmax\":\n",
+    "                n = len(outputs)\n",
+    "                dzdh = np.zeros((n, n))\n",
+    "                denom = 0\n",
+    "                for i in range(n):\n",
+    "                    denom += math.exp(outputs[i])\n",
+    "                \n",
+    "                for i in range(n):\n",
+    "                    for j in range(n):\n",
+    "                        if i == j:\n",
+    "                            dzdh[i][j] = (denom * math.exp(outputs[i]) - (math.exp(outputs[i])**2))/denom\n",
+    "                        else:\n",
+    "                            dzdh[i][j] = -(math.exp(outputs[j]))*(math.exp(outputs[j]))/denom\n",
+    "\n",
+    "            case \"ReLU\":\n",
+    "                # Put code here and remove pass\n",
+    "                pass\n",
+    "            case \"Tanh\":\n",
+    "                # Put code here and remove pass\n",
+    "                pass\n",
+    "\n",
+    "\n",
+    "\n",
     "            \n",
-    "            for i in range(self.numoutputs):\n",
-    "                for j in range(self.numinputs):\n",
-    "                    dhdw[i,i,j] = inputs[i]\n",
-    "                dhdw[i,i,self.numinputs] = 1\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        # This part computes dhdw        \n",
+    "        dhdw = np.zeros((self.numoutputs, self.numoutputs, self.numinputs+1)) #because of bias\n",
+    "        for i in range(self.numoutputs):\n",
+    "            for j in range(self.numinputs):\n",
+    "                dhdw[i,i,j] = inputs[i]\n",
+    "            dhdw[i,i,self.numinputs] = 1\n",
     "            \n",
-    "                    \n",
+    "        # This part computes dhdx\n",
     "        dhdx = self.weights[:, :-1]\n",
     "\n",
     "\n",
@@ -115,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "35480923",
    "metadata": {},
    "outputs": [
@@ -141,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "79a744c2",
    "metadata": {},
    "outputs": [],
@@ -203,9 +245,16 @@
     "            \n",
     "            gradients.append(self.layers[i].ComputeLocalGradient(tempinput))\n",
     "\n",
-    "        if self.errorfunc == \"MSE\":\n",
+    "        match self.errorfunc:\n",
+    "            case \"MSE\":\n",
+    "                dldz = (0.5) * (outputs[-1] - trueoutputs)\n",
     "\n",
-    "            dldz = outputs[-1] - trueoutputs\n",
+    "            case \"CrossEntropy\":\n",
+    "                dldz = np.zeros(len(trueoutputs))\n",
+    "                spot = np.where(1 == trueoutputs)\n",
+    "                dldz[spot] = 1/outputs[-1][spot]\n",
+    "                \n",
+    "            \n",
     "\n",
     "        # Update weights, working backwards\n",
     "\n",
@@ -218,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "eef2ccb7",
    "metadata": {},
    "outputs": [
@@ -226,17 +275,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1528830187961792\n",
-      "0.12452738319454848\n",
-      "0.09208926757939472\n",
-      "0.06253673651348027\n",
-      "0.04154976528980273\n",
-      "0.028720748296327477\n",
-      "0.021050586377095684\n",
-      "0.016266848704803247\n",
-      "0.013111504364355491\n",
-      "0.010920133321001077\n",
-      "0.009330680154468215\n"
+      "0.007489332408031373\n",
+      "0.007211536396267286\n",
+      "0.006953876613498218\n",
+      "0.006714169933362821\n",
+      "0.006490547826202715\n",
+      "0.006281400210849694\n",
+      "0.006085331142031133\n",
+      "0.005901123484036522\n",
+      "0.005727710485896441\n",
+      "0.005564152713317018\n",
+      "0.005409619179246499\n"
      ]
     }
    ],
@@ -266,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "a6b2becb",
    "metadata": {},
    "outputs": [],
@@ -280,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "0d12a2f8",
    "metadata": {},
    "outputs": [
@@ -350,18 +399,18 @@
        "         0,   0,   0,   0], dtype=uint8)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train[0].reshape(28*28)"
+    "x_train[0].reshape(28*28)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "f0adc12d",
    "metadata": {},
    "outputs": [
@@ -370,11 +419,11 @@
      "output_type": "stream",
      "text": [
       "107.94117647058823\n",
-      "0.19414503171699102\n",
-      "1.4434620545635267e-05\n",
-      "Final check evaluation: [array([5.30330837e-03, 2.38488079e-05, 7.17693608e-03, 7.27893443e-03,\n",
-      "       6.66878134e-07, 9.99757310e-01, 7.19027901e-03, 7.26844085e-03,\n",
-      "       6.55544495e-05, 7.17509049e-03])]\n"
+      "0.11650631426568514\n",
+      "0.10143696047884262\n",
+      "Final check evaluation: [array([5.98476310e-03, 2.31399700e-06, 3.69476482e-08, 9.99437011e-01,\n",
+      "       9.92206956e-01, 8.80577906e-01, 1.03143035e-01, 9.33263510e-02,\n",
+      "       1.86453854e-03, 1.08355908e-01])]\n"
      ]
     }
    ],
@@ -392,22 +441,16 @@
     "#print(MyMNISTNetwork.layers[-1].weights.dtype)\n",
     "\n",
     "onehot = np.array([0,0,0,0,0,1,0,0,0,0])\n",
+    "\n",
+    "\n",
     "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
-    "for i in range(10000):\n",
+    "for i in range(100):\n",
     "    MyMNISTNetwork.BackPropagate(testinput, onehot, 1)\n",
     "    \n",
     "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
     "\n",
     "print(\"Final check evaluation: \" + str(MyMNISTNetwork.Evaluate(testinput)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10d5d919",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
