--- a/Neural Nets/neuralnets2.ipynb
+++ b/Neural Nets/neuralnets2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85b65288",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4d98633",
    "metadata": {},
    "outputs": [],
@@ -58,9 +58,11 @@
     "                outputs = outputs/denom\n",
     "\n",
     "            case \"ReLU\":\n",
-    "                pass \n",
+    "                # Put code here, delete the pass\n",
+    "                pass #Alejandro shall not pass\n",
     "            \n",
     "            case \"Tanh\":\n",
+    "                # Put code here, delete the pass\n",
     "                pass\n",
     "\n",
     "\n",
@@ -96,9 +98,9 @@
     "                for i in range(n):\n",
     "                    for j in range(n):\n",
     "                        if i == j:\n",
-    "                            dzdh[i][j] = (denom * math.exp(outputs[i]) - (math.exp(outputs[i])**2))/denom\n",
+    "                            dzdh[i][j] = (denom * math.exp(outputs[i]) - (math.exp(outputs[i])**2))/(denom**2)\n",
     "                        else:\n",
-    "                            dzdh[i][j] = -(math.exp(outputs[j]))*(math.exp(outputs[j]))/denom\n",
+    "                            dzdh[i][j] = -(math.exp(outputs[j]))*(math.exp(outputs[j]))/(denom**2)\n",
     "\n",
     "            case \"ReLU\":\n",
     "                # Put code here and remove pass\n",
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "35480923",
    "metadata": {},
    "outputs": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "79a744c2",
    "metadata": {},
    "outputs": [],
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "eef2ccb7",
    "metadata": {},
    "outputs": [
@@ -254,17 +256,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.007489332408031373\n",
-      "0.007211536396267286\n",
-      "0.006953876613498218\n",
-      "0.006714169933362821\n",
-      "0.006490547826202715\n",
-      "0.006281400210849694\n",
-      "0.006085331142031133\n",
-      "0.005901123484036522\n",
-      "0.005727710485896441\n",
-      "0.005564152713317018\n",
-      "0.005409619179246499\n"
+      "0.20694143149980698\n",
+      "0.18921913556152123\n",
+      "0.17363009431339368\n",
+      "0.1600421562186986\n",
+      "0.14814484113266102\n",
+      "0.13760005912519938\n",
+      "0.12811528205558212\n",
+      "0.11946081133461618\n",
+      "0.11145939867811376\n",
+      "0.10396476108801472\n",
+      "0.0968354090388515\n"
      ]
     }
    ],
@@ -274,19 +276,16 @@
     "MyLayer2 = NeuralLayer(3, 2, \"Sigmoid\")\n",
     "\n",
     "\n",
-    "\n",
     "MyNN.AppendLayer(MyLayer1)\n",
     "MyNN.AppendLayer(MyLayer2)\n",
     "\n",
     "myinput = np.array([1,2,3,4,5])\n",
     "mytrue = np.array([1,0])\n",
     "\n",
-    "#MyNN.Evaluate(myinput)\n",
     "print(MyNN.ComputeError(myinput, mytrue))\n",
     "\n",
     "for i in range(10):\n",
     "    MyNN.BackPropagate(myinput, mytrue, 1)\n",
-    "    #MyNN.Evaluate(myinput)\n",
     "    print(MyNN.ComputeError(myinput, mytrue))\n",
     "\n",
     "\n"
@@ -294,21 +293,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a6b2becb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
-    "assert x_train.shape == (60000, 28, 28)\n",
-    "assert x_test.shape == (10000, 28, 28)\n",
-    "assert y_train.shape == (60000,)\n",
-    "assert y_test.shape == (10000,)"
+    "# Load data from MNIST database\n",
+    "(x_train0, y_train0), (x_test0, y_test0) = tf.keras.datasets.mnist.load_data()\n",
+    "assert x_train0.shape == (60000, 28, 28)\n",
+    "assert x_test0.shape == (10000, 28, 28)\n",
+    "assert y_train0.shape == (60000,)\n",
+    "assert y_test0.shape == (10000,)\n",
+    "\n",
+    "# Prepare data for processing\n",
+    "# x_train and x_test need to be reshaped and converted to np.float64\n",
+    "# y_train and y_test need to be one-hot encoded\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "0d12a2f8",
    "metadata": {},
    "outputs": [
@@ -378,18 +385,18 @@
        "         0,   0,   0,   0], dtype=uint8)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train[0].reshape(28*28)\n"
+    "x_train0[0].reshape(28*28)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "f0adc12d",
    "metadata": {},
    "outputs": [
@@ -397,12 +404,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "107.94117647058823\n",
-      "0.11650631426568514\n",
-      "0.10143696047884262\n",
-      "Final check evaluation: [array([5.98476310e-03, 2.31399700e-06, 3.69476482e-08, 9.99437011e-01,\n",
-      "       9.92206956e-01, 8.80577906e-01, 1.03143035e-01, 9.33263510e-02,\n",
-      "       1.86453854e-03, 1.08355908e-01])]\n"
+      "0.22827517506054051\n",
+      "0.22712407488980474\n",
+      "0.22595724260855454\n",
+      "0.2247813184038893\n",
+      "0.22360362521614766\n",
+      "0.22243191994306688\n",
+      "0.2212740982464195\n",
+      "0.22013787690258296\n",
+      "0.219030482399749\n",
+      "0.21795837470078983\n",
+      "0.21692703048650253\n",
+      "0.21594080173075508\n",
+      "0.21500285504810698\n",
+      "0.21411518713761196\n",
+      "0.21327870371542476\n",
+      "0.21249334465460032\n",
+      "0.21175823676383812\n",
+      "0.21107185712385085\n",
+      "0.2104321931604472\n",
+      "0.20983688963497293\n",
+      "0.2092833766508611\n",
+      "0.20876897609096154\n",
+      "0.20829098638703894\n",
+      "0.2078467471705677\n",
+      "0.2074336862811697\n",
+      "0.20704935198712535\n",
+      "0.2066914332746405\n",
+      "0.2063577708367342\n",
+      "0.20604636105093208\n",
+      "0.20575535485475985\n",
+      "0.20548305305761874\n",
+      "0.20522789929353671\n",
+      "0.2049884715331644\n",
+      "0.20476347283745291\n",
+      "0.2045517218466102\n",
+      "0.20435214335045107\n",
+      "0.2041637591735344\n",
+      "0.20398567952403585\n",
+      "0.20381709489329136\n",
+      "0.2036572685483582\n",
+      "0.20350552962865992\n",
+      "0.2033612668364974\n",
+      "0.20322392269731265\n",
+      "0.20309298835708728\n",
+      "0.20296799887960298\n",
+      "0.20284852900434336\n",
+      "0.20273418932572032\n",
+      "0.2026246228554342\n",
+      "0.20251950193167895\n",
+      "0.20241852544124977\n",
+      "0.20232141632318\n",
+      "0.2022279193251662\n",
+      "0.20213779898663362\n",
+      "0.20205083782477948\n",
+      "0.20196683470227011\n",
+      "0.20188560335743527\n",
+      "0.20180697107979748\n",
+      "0.2017307775155818\n",
+      "0.2016568735894985\n",
+      "0.2015851205305637\n",
+      "0.2015153889910528\n",
+      "0.2014475582488644\n",
+      "0.20138151548463554\n",
+      "0.2013171551258869\n",
+      "0.20125437825132142\n",
+      "0.20119309204914212\n",
+      "0.20113320932391948\n",
+      "0.201074648047127\n",
+      "0.20101733094698643\n",
+      "0.20096118513372682\n",
+      "0.2009061417567753\n",
+      "0.20085213569076074\n",
+      "0.20079910524753988\n",
+      "0.20074699191173892\n",
+      "0.20069574009756583\n",
+      "0.2006452969248731\n",
+      "0.20059561201265433\n",
+      "0.20054663728834105\n",
+      "0.20049832681142438\n",
+      "0.20045063661007143\n",
+      "0.20040352452953475\n",
+      "0.20035695009126608\n",
+      "0.20031087436174935\n",
+      "0.20026525983015747\n",
+      "0.20022007029402084\n",
+      "0.20017527075216596\n",
+      "0.20013082730425044\n",
+      "0.20008670705627654\n",
+      "0.20004287803151857\n",
+      "0.19999930908634694\n",
+      "0.19995596983047034\n",
+      "0.19991283055115913\n",
+      "0.19986986214104072\n",
+      "0.19982703602909285\n",
+      "0.19978432411448196\n",
+      "0.19974169870292058\n",
+      "0.19969913244523602\n",
+      "0.1996565982778622\n",
+      "0.19961406936498022\n",
+      "0.19957151904204967\n",
+      "0.19952892076048087\n",
+      "0.19952892076048087\n",
+      "Final check evaluation: [array([9.99998252e-01, 1.01891882e-01, 9.14636943e-02, 7.04532178e-05,\n",
+      "       3.71264794e-02, 2.27553738e-02, 9.99780074e-01, 1.35979258e-05,\n",
+      "       1.32736922e-01, 9.99134435e-01])]\n"
      ]
     }
    ],
@@ -411,25 +517,33 @@
     "MyMNISTNetwork.AppendLayer(NeuralLayer(28*28,10,\"Sigmoid\"))\n",
     "\n",
     "\n",
-    "y_train[0]\n",
+    "y_train0[0]\n",
     "\n",
-    "testinput = np.astype(x_train[0].reshape(28*28), np.float64)\n",
+    "testinput = np.astype(x_train0[0].reshape(28*28), np.float64)\n",
     "testinput /= 255.0\n",
-    "print(testinput.sum())\n",
+    "#print(testinput.sum())\n",
     "#print(MyMNISTNetwork.Evaluate(testinput))\n",
     "#print(MyMNISTNetwork.layers[-1].weights.dtype)\n",
     "\n",
     "onehot = np.array([0,0,0,0,0,1,0,0,0,0])\n",
     "\n",
-    "\n",
     "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
     "for i in range(100):\n",
     "    MyMNISTNetwork.BackPropagate(testinput, onehot, 1)\n",
+    "    print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
     "    \n",
     "print(MyMNISTNetwork.ComputeError(testinput, onehot))\n",
     "\n",
     "print(\"Final check evaluation: \" + str(MyMNISTNetwork.Evaluate(testinput)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cae961e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
